<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:padding="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:showIn="@layout/fragment_step_view">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/prevView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/previousArrowIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_prev"
            android:contentDescription="@string/arrow_prev_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/previousTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/previous_label"
            android:textColor="@color/colorButtonActive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/previousArrowIV"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/nextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/next_label"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nextArrowIV"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nextArrowIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_next"
            android:contentDescription="@string/arrow_next_desc"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>