<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/quanitityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/quantity_default"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@id/checkBox" />

        <TextView
            android:id="@+id/ingredientsTV"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/ingredient_default"
            app:layout_constraintBaseline_toBaselineOf="@+id/quanitityTV"
            app:layout_constraintStart_toEndOf="@id/measureTV" />

        <TextView
            android:id="@+id/measureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/measure_Default"
            app:layout_constraintBaseline_toBaselineOf="@+id/ingredientsTV"
            app:layout_constraintStart_toEndOf="@id/quanitityTV" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"/>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>