<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navBar"
        android:background="@drawable/background_box_widget">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/arrow_prev"
        android:layout_alignParentLeft="true"
        android:id="@+id/widgetArrowPrev"/>

    <TextView
        android:id="@+id/widget_recipe_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/arrow_next"
        android:layout_alignParentEnd="true"
        android:id="@+id/widgetArrowNext"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/navBar"
        android:background="@drawable/white_box">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="textStart"
            android:id="@+id/textlabel"
            />

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients_listGV"
            android:layout_below="@+id/textlabel"
            android:numColumns="1">

        </GridView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_button_label"
            android:textStyle="italic"
            android:textColor="@color/colorButtonInactive"
            android:layout_below="@id/ingredients_listGV"
            android:id="@+id/launchRecipe"/>

    </RelativeLayout>

</RelativeLayout>